# ReZound misc/Makefile.am Written by Anthony Ventimiglia
## Process this file with automake to create Makefile.in
##
##
##   Copyright (C) 2002 - Anthony Ventimiglia
##   
##   This file is part of ReZound, an audio editing application, 
##   
##   ReZound is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License as published
##   by the Free Software Foundation; either version 2 of the License,
##   or (at your option) any later version.
##   
##   ReZound is distributed in the hope that it will be useful, but
##   WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##   
##   You should have received a copy of the GNU General Public License
##   along with this program; if not, write to the Free Software
##   Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA
##  

include $(top_srcdir)/config/am_include.mk

EXTRA_DIST=\
	GreenCheck1.gif\
	GreenLED1.gif\
	GreenPlus1.gif\
	OffLED1.gif\
	RedLED1.gif\
	RedMinus1.gif\
	RedX1.gif\
	YellowLED1.gif\
	advanced_action.gif\
	advanced_action_buff.gif\
	edit_copy.gif\
	edit_crop.gif\
	edit_cut.gif\
	edit_delete.gif\
	edit_paste.gif\
	edit_redo.gif\
	edit_undo.gif\
	file_close.gif\
	file_new.gif\
	file_open.gif\
	file_revert.gif\
	file_save.gif\
	file_save_as.gif\
	icon_logo_16.gif\
	icon_logo_32.gif\
	jump_to_beginning.gif\
	jump_to_next_q.gif\
	jump_to_previous_q.gif\
	jump_to_selection.gif\
	logo.gif\
	normal_action.gif\
	normal_action_buff.gif\
	notes.gif\
	pause.gif\
	play_all_looped.gif\
	play_all_once.gif\
	play_selection_looped.gif\
	play_selection_once.gif\
	stop.gif
